--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,6 +13,11 @@
   height: 1080px;
 }
 
+#message {
+  color: red;
+  font-size: 20px;
+}
+
 .wrapper3 {
   background-image: url("/images/toilet.jpg");
   background-size: cover;
@@ -33,8 +38,9 @@
 .btn-mainhall:hover,
 .btn-register:hover,
 .btn-i:hover,
-.btn-toilet:hover{
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+.btn-toilet:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn-toilet {
